# TemplatePythonProject

./: .flake8  .gitignore  .pydocstyle  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  pyproject.toml.tmp  requirements-dev.in  requirements.txt
.github/workflows/: makefile.yml  push_pipeline.yml  test_pipeline.yml
build_support/: build_pyproject_from_template.py  project_settings.json  project_settings.yaml  push_if_allowed.py
build_support/build_src/: __init__.py  build_tools.py  common_vars.py  dag_engine.py  execute_build_steps.py  report_build_var.py
build_support/build_src/build_tasks/: __init__.py  aws_build_tasks.py  build_tasks.py  combined_tasks.py  common_build_tasks.py  env_setup_tasks.py  lint_tasks.py  push_tasks.py  python_build_tasks.py  test_tasks.py
build_support/build_src/build_vars/: __init__.py  docker_vars.py  file_and_dir_path_vars.py  git_status_vars.py  machine_introspection_vars.py  project_setting_vars.py  python_vars.py
build_support/build_src/new_project_setup/: __init__.py  license_templates.py  new_project_data_models.py  new_project_dataclass.py  setup_license.py  setup_new_project.py  update_folder_names.py  update_pyproject.py  update_pyproject_toml.py
build_support/build_test/: conftest.py  test_dag_engine.py  test_documentation.py  test_execute_build_steps.py  test_git_version_valid.py  test_make_new_project.py  test_report_build_var.py
build_support/build_test/build_tasks/: test_build_tasks.py  test_env_setup_tasks.py  test_lint.py  test_lint_tasks.py  test_push_tasks.py  test_test_tasks.py
build_support/build_test/build_vars/: test_docker_vars.py  test_file_and_dir_path_vars.py  test_git_status_vars.py  test_machine_introspection_vars.py  test_project_setting_vars.py  test_python_vars.py
build_support/build_test/new_project_setup/: test_license_templates.py  test_new_project_data_models.py  test_new_project_dataclass.py  test_setup_license.py  test_setup_new_project.py
build_support/src/build_support/: __init__.py  build_logging.py  dag_engine.py  dump_ci_cd_run_info.py  execute_build_steps.py  file_caching.py  process_runner.py  report_build_var.py
build_support/test/: conftest.py  test_dag_engine.py  test_execute_build_steps.py  test_git_version_valid.py  test_process_runner.py  test_report_build_var.py
build_support/test/ci_cd_tasks/: test_build_tasks.py  test_env_setup_tasks.py  test_lint_tasks.py  test_push_tasks.py  test_task_node.py  test_test_tasks.py  test_validation_tasks.py
build_support/test/ci_cd_vars/: test_docker_vars.py  test_file_and_dir_path_vars.py  test_git_status_vars.py  test_machine_introspection_vars.py  test_project_setting_vars.py  test_project_structure.py  test_python_vars.py  test_subproject_structure.py
build_support/test/feature_tests/: conftest.py  test_100_template_python_project.py  test_102_template_python_project.py  test_104_template_python_project.py  test_106_template_python_project.py  test_107_template_python_project.py  test_79_template_python_project.py  test_81_template_python_project.py  test_82_template_python_project.py  test_85_template_python_project.py  test_86_template_python_project.py  test_95_template_python_project.py  test_97_template_python_project.py  test_98_template_python_project.py
build_support/test/integration_tests/: conftest.py  test_79_template_python_project.py  test_80_template_python_project.py  test_82_template_python_project.py  test_85_template_python_project.py
build_support/test/new_project_setup/: test_license_templates.py  test_new_project_data_models.py  test_new_project_dataclass.py  test_setup_license.py  test_setup_new_project.py  test_update_folder_names.py  test_update_readme_md.py
build_support/test/process_enforcement/: test_integration_tests_added.py  test_project_version_valid.py  test_resource_folder_naming.py  test_src_resource_folder_naming.py  test_test_resource_folder_naming.py  test_ticketing.py
build_support/test/style_enforcement/: test_docstrings.py  test_project_readme.py  test_sphinx_docs.py  test_ticketing.py
build_support/test/test_utils/: command_runner.py  empty_function_check.py  feature_test_branching.py
build_support/test/unit_tests/: conftest.py  empty_function_check.py  test_build_logging.py  test_dag_engine.py  test_dump_ci_cd_run_info.py  test_execute_build_steps.py  test_file_caching.py  test_process_runner.py  test_report_build_var.py
docs/: __init__.py  creating_a_new_project.rst  developer_tooling.rst  index.rst  project_setup.rst  retrospectives.rst  software_development_process.rst  source_code_style_guide.rst  sub_project_code_docs.rst  sub_projects.rst  subproject_code_docs.rst  subprojects.rst  testing_style_guide.rst  tickets.rst  tickets_across_projects.rst
docs/sphinx_conf/: __init__.py  conf.py
docs/tickets/: 100-add-ticketing-to-docs-and-update-setup-instructions.rst  TEMPLATE.rst
docs/tickets/template_python_project/: 100-add-ticketing-to-docs-and-update-setup-instructions.rst  102-update-readmemd.rst  104-bugfix-test_get_last_modified_time.rst  106-add-src-resource-loader.rst  107-add-ticket-id-to-docker-image-tag.rst  95-replace-print-with-logging.rst  97-switch-from-poetry-to-uv.rst  98-switch-from-mypy-to-ty.rst  index.rst
documentation_enforcement/sphinx_conf/: conf.py
documentation_enforcement/test/: conftest.py  test_docstrings.py  test_git_version_valid.py  test_project_readme.py
infra/src/infra/: __init__.py  main.py
infra/test/unit_tests/: test_main.py
process_and_style_enforcement/sphinx_conf/: conf.py
process_and_style_enforcement/test/: conftest.py  test_docstrings.py  test_integration_tests_added.py  test_project_readme.py  test_sphinx_docs.py
pulumi/: Pulumi.yaml  __main__.py
pulumi/src/pulumi/: __init__.py  __main__.py
pypi_package/docs/: index.rst
pypi_package/test/: test_main.py
src/: README.md
src/template_python_project/: README.md  main.py
test/: conftest.py  conftest.pyi  test_documentation.py  test_git_version_valid.py  test_main.py
test/calculators/: test_calculator.py
(+102 files in other folders)
