[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100
exclude_lines = [
  "pragma: no cov"
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
preview = false
pydocstyle.convention = "google"
ignore = [
  "COM812", # Relying on the ruff formatter to enforce trailing commas.
  "CPY", # Not requiring copyright ot the top of each file.
  "S", # Using bandit standalone instead of including with Ruff.
  "TC006", # I just hate this rule.
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
"process_and_style_enforcement/sphinx_conf/conf.py" = ["INP001"]

[tool.mypy]
plugins = ["pydantic.mypy"]

disallow_any_generics = true
disallow_untyped_defs = true
warn_redundant_casts = true
strict_equality = true
disallow_untyped_calls = true
warn_return_any = true
disallow_any_unimported = true
warn_unused_ignores = true
enable_error_code = [
  "redundant-self",
  "redundant-expr",
  "possibly-undefined",
  "truthy-bool",
  "truthy-iterable",
  "ignore-without-code",
  "unused-awaitable",
  "explicit-override",
  "mutable-override",
  "unimported-reveal",
]


[tool.poetry]
name = "template_python_project"
version = "0.2.32"
license = "unlicense"
packages = [{include = "template_python_project", from="pypi_package/src"}]
description = "A project that can be used as a template to provide some CI/CD out of the box."
authors = ["Alexander Olson <alec.g.olson@gmail.com>"]
readme = "README.md"
repository = "https://github.com/alec-g-olson/TemplatePythonProject"

[tool.poetry.dependencies]
# If python version changed here change:
# - base image in Dockerfile
# - target version of python for ruff: [tool.ruff] => target-version
python = "3.13.5"
Pydantic = "^2.11"

[tool.poetry.group.build]
optional = true

[tool.poetry.group.build.dependencies]
gitpython = "^3.1"
junitparser = "^3.2"
pyyaml = "^6.0"
types-PyYAML = "^6.0"
requests = "^2.32"
types-requests = "^2.32"
tomlkit = "^0.13"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
bandit = {extras = ["baseline", "toml"], version = "^1.8"}
mypy = "^1.16"
pytest = "^8.4"
pytest-cov = "^6.2"
pytest-xdist = "^3.7"
responses = "^0.25"
requests = "^2.32"
ruff = "0.11.13"  # When upgrading ensure we run all stable rules and exclude previews
sphinx = "^8.2"
sphinx-rtd-theme = "^3.0"
types-requests = "^2.32"

[tool.poetry.group.pulumi]
optional = true

[tool.poetry.group.pulumi.dependencies]
pulumi = "3.177.0"  # If changed here change PULUMI_VERSION in Dockerfile
pulumi-aws = "^6.82"

[build-system]
requires = ["poetry-core==2.1.3"]  # If changed here change POETRY_VERSION in Dockerfile
build-backend = "poetry.core.masonry.api"
