[tool.coverage.run]
branch = true
parallel = true
concurrency = ["multiprocessing", "thread"]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
  "pragma: no cov"
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
preview = false
pydocstyle.convention = "google"
ignore = [
  "COM812", # Relying on the ruff formatter to enforce trailing commas.
  "CPY", # Not requiring copyright ot the top of each file.
  "S", # Using bandit standalone instead of including with Ruff.
  "TC006", # I just hate this rule.
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
"process_and_style_enforcement/sphinx_conf/conf.py" = ["INP001"]

[tool.mypy]
plugins = ["pydantic.mypy"]

disallow_any_generics = true
disallow_untyped_defs = true
warn_redundant_casts = true
strict_equality = true
disallow_untyped_calls = true
warn_return_any = true
disallow_any_unimported = true
warn_unused_ignores = true
enable_error_code = [
  "redundant-self",
  "redundant-expr",
  "possibly-undefined",
  "truthy-bool",
  "truthy-iterable",
  "ignore-without-code",
  "unused-awaitable",
  "explicit-override",
  "mutable-override",
  "unimported-reveal",
]

[project]
name = "template_python_project"
version = "0.2.36"
description = "A project that can be used as a template to provide some CI/CD out of the box."
readme = "README.md"
license = { text = "unlicense" }
authors = ["Alexander Olson <alec.g.olson@gmail.com>"]
repository = "https://github.com/alec-g-olson/TemplatePythonProject"
# If python version changed here change:
# - base image in Dockerfile
# - target version of python for ruff: [tool.ruff] => target-version
requires-python = ">=3.13.5"
dependencies = [
  "Pydantic>=2.12,<3",
  "semver>=3.0,<4",
]

[project.optional-dependencies]
build = [
  "gitpython>=3.1,<4",
  "junitparser>=4.0,<5",
  "pyyaml>=6.0,<7",
  "types-PyYAML>=6.0,<7",
  "tomlkit>=0.14,<0.15",
]
dev = [
  "bandit[baseline,toml]>=1.9,<2",
  "mypy>=1.17,<2",
  "pytest>=9.0,<10",
  "pytest-cov>=7.0,<8",
  "pytest-xdist>=3.8,<4",
  "requests>=2.32,<3",
  "ruff==0.15.2",
  "sphinx>=9.1,<10",
  "sphinx-rtd-theme>=3.1,<4",
  "types-requests>=2.32,<3",
]
pulumi = [
  "pulumi==3.223.0",  # If changed here change PULUMI_VERSION in Dockerfile
  "pulumi-aws>=7.20,<8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pypi_package/src/template_python_project"]
